<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".firstapp.ResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="64dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="42sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:text="Hola Nombre"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="28sp"
            android:text="@string/welcome"
            android:layout_marginBottom="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="23sp"
            android:text="@string/push_button"
            android:layout_marginBottom="32dp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:text="@string/search"
            android:backgroundTint="@color/background_button"/>


    </LinearLayout>



</FrameLayout>