<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroapp.DetailSuperheroActivity">

    <ImageView
        android:id="@+id/ivSuperhero"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="-40dp"
        android:elevation="8dp"
        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fondo_degradado" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvSuperheroName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anton_normal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="Prueba" />

            <TextView
                android:id="@+id/tvSuperheroRealName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anton_normal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="sc" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anton_normal"
                android:gravity="center_horizontal"
                android:textSize="11sp"
                tools:text="puc" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewIntelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/fondo_degradado_dos" />

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/fondo_degradado_dos" />

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/fondo_degradado_dos" />

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/fondo_degradado_dos" />

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/fondo_degradado_dos" />

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/fondo_degradado_dos" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton_normal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Intelligencia"
                    android:textColor="@color/black"
                    android:textSize="10.85sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton_normal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Fuerza"
                    android:textColor="@color/black"
                    android:textSize="10.85sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton_normal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Velocidad"
                    android:textColor="@color/black"
                    android:textSize="10.85sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton_normal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Resistencia"
                    android:textColor="@color/black"
                    android:textSize="10.85sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton_normal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Poder"
                    android:textColor="@color/black"
                    android:textSize="10.85sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/anton_normal"
                    android:gravity="center"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text="Combate"
                    android:textColor="@color/black"
                    android:textSize="10.85sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="32dp"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        android:text="@string/primera_aparici_n" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        android:text="@string/lugar_de_nacimiento" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        android:text="@string/raza" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        android:text="@string/g_nero" />


                </LinearLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/tvFirstAppearance"
                        android:layout_width="match_parent"
                        android:singleLine="true"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        tools:text="hola esto es un texto de prueba" />

                    <TextView
                        android:id="@+id/tvPlaceOfBirth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        tools:text="hola esto es un texto de prueba" />

                    <TextView
                        android:id="@+id/tvRace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginVertical="8dp"
                        android:singleLine="true"
                        android:fontFamily="@font/anton_normal"
                        android:textColor="@color/black"
                        tools:text="hola esto es un texto de prueba" />

                    <TextView
                        android:id="@+id/tvGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:layout_marginVertical="8dp"
                        android:fontFamily="@font/anton_normal"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        tools:text="hola esto es un texto de prueba" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </LinearLayout>




        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>